# lokal_Project_generator

./: .coverage  .flake8  .gitignore  Makefile  NEWS.md  QUICKSTART.md  README.md  TEMPLATE_REGISTRY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup_project.sh
.github/workflows/: ci.yml
docs/: ESP32_TEMPLATES.md  TAUPUNKT_TEMPLATE.md  checklist.md  final_summary.md  todo.md
examples/: taupunkt_example.py
src/: __init__.py  __main__.py  cli.py  dependency_management.py  environment.py  esp32_templates.py  generate_project.py  gui.py  main.py  taupunkt_template.py  template_base.py  template_manager.py  template_preview.py  template_registry.py  template_service.py  venv_manager.py  virtualenv_manager.py  vscode_integration.py
src/project_generator/: __init__.py  container.py  event_bus.py  file_service.py  main.py  plugin_manager.py  template_service.py  templates.py
src/project_generator/plugins/: default.py
templates/automation/: README.md  pyproject.toml  requirements.txt
templates/automation/src/: main.py
templates/game_dev/: README.md  pyproject.toml  requirements.txt
templates/game_dev/src/: main.py
templates/smart_home/: README.md  pyproject.toml
templates/smart_home/src/: main.py
tests/: test_cli.py  test_dependency_management.py  test_environment.py  test_esp32_templates.py  test_main.py  test_registry.py  test_setup_script.py  test_taupunkt.py  test_template_manager.py  test_template_service.py  test_templates.py  test_venv_manager.py  test_virtualenv_manager.py  test_vscode_integration.py
