[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_generator"
version = "0.1.0"
description = "A simple project structure generator"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
