[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_generator"
version = "0.1.0"
description = "A small helper for project setup"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
